[tool.poetry]
name = "prepareclips"
version = "0.1.0"
description = ""
authors = ["Kevin Houlihan <kevin@crimsoncookie.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.scripts]
prepareclips = "prepareclips:_main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
